...
                        .font(.system(size: 16))
                        .bold()
                        .padding(.vertical, 12)
                        .padding(.horizontal, 16)
                        .background(RoundedRectangle(cornerRadius: 16, style: .continuous).fill(Color.blue.opacity(0.1)))
                        .foregroundColor(.blue)
                }.accessibility(identifier: "loginButton")
            } else {
                HStack {
                    Text("You are logged in!")
                        .foregroundColor(.gray)
                        .font(.system(size: 16))
                    Image(systemName: "checkmark.circle.fill")
...
                        .font(.system(size: 16))
                        .bold()
                        .padding(.vertical, 12)
                        .padding(.horizontal, 16)
                        .background(RoundedRectangle(cornerRadius: 16, style: .continuous).fill(Color.blue.opacity(0.1)))
                        .foregroundColor(.blue)
                }.accessibility(identifier: "signOutButton")
            }
        }.padding(.horizontal, 12)
    }
}

struct Home_Previews: PreviewProvider {
...
